--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Subahjit Dey | Portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="Welcome to my portfolio">
+    <meta property="og:image" content="http://www.techninetyeight.com/logo192.png">
+    <meta property="description" content="Subhajit Dey | Portfolio">
+    <meta property="og:url" content="http://www.techninetyeight.com">
+    <script data-ad-client="ca-pub-4195448583090836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Portfolio - Subhajit Dey</title>
   </head>
